--- a/config/resumes.properties
+++ b/config/resumes.properties
@@ -1,4 +1,4 @@
-storage.dir=C:/Java/testStorage
+storage.dir=C:/Java/rep/testStorage
 db.url=jdbc:postgresql://localhost:5432/resumes
 db.user=postgres
 db.password=postgres
